apps/gammasite-prod/homeassistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-ext
  namespace: default
spec:
  type: ExternalName
  externalName: homeassistant.oaklodge.lan
  ports:
    - name: homeassistant
      port: 8123
      protocol: TCP
      targetPort: 8123
