apps/gammasite-prod/homeassistant/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ext
  namespace: default
spec:
  rules:
    - host: homeassistant.${cluster_ext_domain}
      http:
        paths:
          - backend:
              service:
                name: homeassistant-ext
                port:
                  number: 8123
            path: /
            pathType: Prefix
